<resources>
    <string name="app_name">Mel\'s Pass</string>
    <string name="welcom_fragment">Hello blank fragment it\'s the Welcome Fragment</string>
    <string name="Pass_edit_label_width">100dip</string>
    <string name="tvUrl">Url :</string>
    <string name="tvPassword">Password :</string>
    <string name="tvUserName">Username :</string>
    <string name="tvName">Name :</string>
    <string name="tvGroup">Groupe :</string>
    <string name="tvdescription">Description :</string>
    <string name="tvDescription.hint">"Description "</string>
    <string name="sGroup.hint">Choix du groupe</string>
    <string name="etName.hint">Nom de l\'entrée</string>
    <string name="etUserName.hint">Username</string>
    <string name="etUserPass.hint">Password</string>
    <string name="etUrl.hint">Url de l\'entrée</string>
    <string name="bCopy.hint">Copier dans le presse-papier</string>
    <string name="bShowPassword">Afficher / cacher le password</string>
    <string name="bSave.hint">Sauvegarder</string>
    <string name="bCancel">Annuler</string>
    <string name="group.add">Ajouter un groupe</string>
    <string name="menu.Search">Rechercher</string>
    <string name="Pass.add">Ajouter un password</string>
    <string name="bFirst.hint">Premier</string>
    <string name="bNext.hint">Prochain</string>
    <string name="bPrevious.hine">Précédent</string>
    <string name="bBackPage.hine">Retour</string>
    <string name="bLast.hint">Dernier</string>
    <string name="Pass.edit">Modifier</string>
    <string name="bEdit.hint">Editer</string>
    <string name="bdelete.hint">Supprimer</string>
    <string name="tvIcon">Icon :</string>
    <string name="Ok">Oui</string>
    <string name="No">Non</string>
    <string name="Delete">Supprimer</string>
    <string name="Delete_Msg">Are you sure you want to delete?</string>
    <string name="dialog_password_title">Type de mot de passe</string>
    <string name="dialog_password_uppercase">Majuscule</string>
    <string name="dialog_password_lowercase">Minuscule</string>
    <string name="dialog_password_number">Numérique</string>
    <string name="dialog_password_specialchar">Caractères spéciaux</string>
    <string name="icon_star_24dp">Etoile</string>
    <string name="icon_cake_24dp">Gateau</string>
    <string name="icon_location_city_24dp">Ville</string>
    <string name="DrawablePicker.Title">Choix de l\'image du groupe</string>
    <string name="close">Fermer</string>
    <string name="ic_adb_black_24dp">Android logo</string>
    <string name="groupList_title">Liste des groupes</string>
    <string name="list_group_fragment_title">Liste des groupes</string>
    <string name="detail_group_fragment_title">Détail du groupe</string>
    <string name="detail_pass_fragment_title">Détail du login</string>
    <string name="list_pass_fragment_title">Logins du groupe </string>
    <string name="tvGroup_label">Groupe</string>
    <string name="bGeneratePassword">Génération d\'un password</string>
    <string name="bOpenUrl.hint">Ouvrir l\'URL</string>
    <string name="dialog_search_title">Recherche</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_search_result_fragment_title">Résultat de la recherche</string>
    <string name="search_dialog_search_string">Chaîne de recherche</string>
    <string name="biometric_no_hardware">Pas de lecteur biometrique</string>
    <string name="biometric_hardware_unavailable">Lecteur biometric pas disponible</string>
    <string name="biometric_not_setup">"Lecteur biometric pas initialisé "</string>
    <string name="biometric_title">Lecteur biometric</string>
    <string name="biometric_subtitle"></string>
    <string name="biometric_description">Placez votre doigt sur le lecteur d\’empreinte</string>
    <string name="biometric_auth_error">Erreur d\'identification</string>
    <string name="copy_password">Password copié dans le presse-papier</string>
    <string name="copy_username">Nom d\'utilisateur copié dans le presse papier</string>
    <string name="splash_screen_welcome">Bienvenue</string>
    <string name="menu.BackupSetup">Backup configuration</string>
    <string name="menu.doBackup">Do backup</string>
    <string name="menu.doRestore">Restore</string>

</resources>
