<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:layout_marginTop="20dp"
    >


    <TextView
        android:id="@+id/tvIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:width="100dip"
        android:text="@string/tvIcon" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:src="@drawable/ic_adb_black_24dp"
        android:layout_alignBottom="@+id/tvIcon"
        android:layout_toEndOf="@+id/tvIcon"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvIcon"
        android:layout_marginTop="30dp"
        android:width="100dip"
        android:text="@string/tvName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvName"
        android:ems="10"
        android:hint="@string/etName.hint"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_marginTop="30dp"
        android:width="100dip"
        android:text="@string/tvdescription" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDescription"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvDescription"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tvDescription.hint"
        android:inputType="textPersonName" />

</RelativeLayout>